Review Request 6211 see #PLS-2216 - fix for userdropdown being hidden by create model button

--- a/le-ui/projects/common/assets/sass/_navigation.scss
+++ b/le-ui/projects/common/assets/sass/_navigation.scss
@@ -488,6 +488,7 @@ html.no-cssmask {
     .profile-nav {
         float: right;
         max-width: 250px;
+        z-index: 30;
         & > a {
             padding: 16px 20px 16px 20px;
             display: block;
